# mac_reroduce

./: .gitignore  CLEANUP_SUMMARY.md  DATASET_SPLIT_FIX_SUMMARY.md  Pretraing_MAC.PY  README.md  README_automation.md  analyze_results.py  automation_config.yaml  data201610a.py  generate_final_report.py  plot_midu.py  preprocess_rml2016a.py  preprocess_rml2016b.py  preprocess_rml2018.py  preprocess_rml2018_memory_efficient.py  pyproject.toml  quick_test_config.yaml  requirements_automation.txt  run_comprehensive_experiments.py  run_mac_experiments.sh  setup_env.sh  test_mac_backbone.py  util.py  verify_corrected_splits.py
models/: __init__.py  backbone.py
old_files/: Fine_tuning_Times.py  README_analysis_tools.md  README_overnight_training.md  analyze_datasets.py  data201610b.py  overnight_training.py  preprocess_rml2016a.py  preprocess_rml2016b.py  preprocess_rml2018.py  setup_env.sh  start_overnight_training.sh  training_dashboard.py  util.py  util_original_backup.py  visualize_features.py
old_files/demo_dashboard/: training_metrics.json  training_report.txt
old_files/overnight_training_results/: WAKE_UP_SUMMARY.txt  training_results.json
old_files/training_dashboard/: training_metrics.json  training_report.txt
training_dashboard/: training_metrics.json  training_report.txt
