[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mac-framework"
version = "1.0.0"
description = "Multi-representation domain Attentive Contrastive learning for unsupervised automatic modulation recognition"
readme = "README.md"
requires-python = "==3.10"
authors = [
    {name = "MAC Framework Team", email = "mac@example.com"},
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tensorboard>=2.8.0",
    "tensorboard-logger>=0.1.0",
    "PyWavelets>=1.3.0",
    "tqdm>=4.60.0",
    "h5py>=3.6.0",
    "pickle5>=0.0.11; python_version<'3.8'",
]

[project.scripts]
mac-pretrain = "Pretraing_MAC:main"
mac-finetune = "Fine_tuning_Times:main"
mac-test = "test_mac_backbone:main"

[tool.hatch.build.targets.wheel]
packages = ["models", "NCE"]
